--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <h1>My Contact Details</h1>
     <p>Find me on <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Youtube</a> at MissJessica.cello</p>
     <p>Listen to my music on <a href="https://open.spotify.com/artist/50hiYMhi0g77BOkkQ4zebB?si=RX9l0PStQtWhFQcoeii9cw">Spotify</a></p>
-    <p>Shoot me an <a href="mailto:missjessica.cello@gmail.com">email</a> at missjessica.cello@gmail.com</p>
+    <p>Shoot me an <a href="mailto:fakeemail@gmail.com">email</a> at fakeemail@gmail.com</p>
     <p>Call me at <a href="tel:+1(800)555-0123">(800) 555-0123</a></p>
     <p><a href="index.html">Back Home</a></p>
 </body>
