--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td> <img src="images/jessica-cello-cropcircle.png" width="300" height="300" alt="profile photo of cellist in the woods"></td>
+            <td> <img src="images/jessica-cello-cropcircle.png" width="300" height="300" alt="Jessica Farmer Profile Photo forest cello"></td>
             <td><h1>Jessica A. Farmer</h1>
     <p><em>A Real Cool Lady</em> 😎</p>
     <p>I was born and raised in sunny Phoenix, AZ.
