--- a/index.html
+++ b/index.html
@@ -73,6 +73,10 @@
             <td>Latte Art</td>
             <td>⭐️⭐️⭐️⭐️</td>
         </tr>
+        <tr>
+            <td>HTML</td>
+            <td>⭐️⭐️⭐️⭐️</td>
+        </tr>
     </table>
     <hr>
     <a href="hobbies.html">My Hobbies</a>
