--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
         <tr>
             <td> <img src="images/jessica-cello-cropcircle.png" width="300" height="300" alt="Jessica Farmer Profile Photo forest cello"></td>
             <td><h1>Jessica A. Farmer</h1>
-    <p><em>A Real Cool Lady</em> 😎</p>
+    <p><em>Future Web Developer</em></p>
     <p>I was born and raised in sunny Phoenix, AZ.
     <br>I love to learn and spend way too much time in coffee shops.
-    <br>I love to play the cello and have picnics and read in the sunshine. 
-    <br>I now live in beautiful San Diego, CA with my smokin' hot boyfriend</p></td>
+    <br>I love to play the cello, have picnics, and read. 
+    <br>I now live in beautiful San Diego, CA.</p></td>
         </tr>
     </table>
     <hr>
