--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
             <td> <img src="images/jessica-cello-cropcircle.png" width="300" height="300" alt="Jessica Farmer Profile Photo forest cello"></td>
             <td><h1>Jessica A. Farmer</h1>
     <p><em>Future Web Developer</em></p>
-    <p>I was born and raised in sunny Phoenix, AZ.
-    <br>I love to learn and spend way too much time in coffee shops.
-    <br>I love to play the cello, have picnics, and read. 
-    <br>I now live in beautiful San Diego, CA.</p></td>
+    <p>I live in beautiful San Diego, CA.
+    <br>I love to surf, have picnics, and read. 
+    <br>I love good design and am studying to be a web developer.</p></td>
         </tr>
     </table>
     <hr>
@@ -42,6 +41,10 @@
         </thead>
         <tbody>
             <tr>
+                <td>2023-current</td>
+                <td>Baker at Whole Foods</td>
+            </tr>
+            <tr>
                 <td>2021-2022</td>
                 <td>Barista at Late For the Train</td>
             </tr>
@@ -58,7 +61,7 @@
     <h3>Skills</h3>
     <table cellspacing="10">
         <tr>
-            <td>Complaint Handling</td>
+            <td>Customer Relations</td>
             <td>⭐️⭐️⭐️⭐️⭐️</td>
         </tr>
         <tr>
@@ -66,7 +69,7 @@
             <td>⭐️⭐️⭐️⭐️⭐️</td>
         </tr>
         <tr>
-            <td>Pastry Baking</td>
+            <td>Pastry</td>
             <td>⭐️⭐️⭐️⭐️</td>
         </tr>
         <tr>
